add beta api template
